# smg

./: Cargo.toml
.github/workflows/: e2e-gpu-job.yml  nightly-benchmark.yml  pr-test-rust.yml  release-go.yml  release-grpc-proto.yml  release-pypi.yml  release-sglang-docker.yml  release-trtllm-docker.yml  release-vllm-docker.yml
bindings/golang/: Cargo.toml
bindings/golang/src/: client.rs  grpc_converter.rs  policy.rs  preprocessor.rs  proto_parse.rs  stream.rs
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/src/: lib.rs
bindings/python/src/smg/: router_args.py  serve.py
bindings/python/tests/: test_serve.py
crates/data_connector/: Cargo.toml
crates/data_connector/src/: core.rs  lib.rs  schema.rs
crates/grpc_client/: Cargo.toml
crates/grpc_client/go/: .gitignore  README.md  generate.go  generate.sh  go.mod
crates/grpc_client/go/proto/: common.proto  sglang_encoder.proto  sglang_scheduler.proto  trtllm_service.proto  vllm_engine.proto
crates/grpc_client/golang/: .gitignore  Makefile  go.mod
crates/grpc_client/golang/scripts/: build.sh
crates/grpc_client/golang/smg_grpc_proto/common/: common.pb.go
crates/grpc_client/golang/smg_grpc_proto/sglang_encoder/: sglang_encoder.pb.go  sglang_encoder_grpc.pb.go
crates/grpc_client/golang/smg_grpc_proto/sglang_scheduler/: sglang_scheduler.pb.go  sglang_scheduler_grpc.pb.go
crates/grpc_client/golang/smg_grpc_proto/trtllm_service/: trtllm_service.pb.go  trtllm_service_grpc.pb.go
crates/grpc_client/golang/smg_grpc_proto/vllm_engine/: vllm_engine.pb.go  vllm_engine_grpc.pb.go
crates/grpc_client/proto/: sglang_scheduler.proto
crates/grpc_client/src/: sglang_scheduler.rs  trtllm_service.rs  vllm_engine.rs
crates/kv_index/: Cargo.toml
crates/mesh/: Cargo.toml
crates/mesh/src/: controller.rs  ping_server.rs
crates/multimodal/: Cargo.toml
crates/multimodal/src/registry/: llava.rs  mod.rs  phi3_v.rs  traits.rs
crates/multimodal/src/vision/: image_processor.rs  transforms.rs
crates/multimodal/src/vision/processors/: llava.rs
crates/protocols/: Cargo.toml
crates/protocols/src/: responses.rs
crates/reasoning_parser/: Cargo.toml
crates/tokenizer/: Cargo.toml
crates/tool_parser/: Cargo.toml
deploy/helm/smg/: Chart.yaml
docs/concepts/architecture/: high-availability.md  service-discovery.md
docs/getting-started/: index.md
e2e_test/: conftest.py
e2e_test/chat_completions/: test_enable_thinking.py  test_function_calling.py  test_openai_server.py  test_reasoning_content.py  test_structured_output.py  test_validation.py
e2e_test/embeddings/: test_basic.py  test_correctness.py
e2e_test/fixtures/: setup_backend.py
e2e_test/infra/: worker.py
e2e_test/messages/: test_basic.py  test_mcp_tool.py  test_tool_search.py  test_tool_use.py
e2e_test/responses/: test_basic_crud.py  test_builtin_tools.py  test_state_management.py  test_storage_hooks.py  test_streaming_events.py  test_structured_output.py  test_tools_call.py
e2e_test/router/: test_mmmu.py  test_worker_api.py
grpc_client/python/: pyproject.toml
grpc_client/src/: lib.rs  sglang_scheduler.rs  trtllm_service.rs  vllm_engine.rs
grpc_servicer/: pyproject.toml
grpc_servicer/smg_grpc_servicer/sglang/: server.py
grpc_servicer/smg_grpc_servicer/vllm/: servicer.py
kv_index/: Cargo.toml
kv_index/src/: event_tree.rs  lib.rs
model_gateway/: Cargo.toml
model_gateway/benches/: routing_allocation_bench.rs
model_gateway/src/: app_context.rs  main.rs  service_discovery.rs
model_gateway/src/config/: builder.rs  types.rs  validation.rs
model_gateway/src/core/: kv_event_monitor.rs  mod.rs  worker.rs  worker_manager.rs  worker_registry.rs
model_gateway/src/core/steps/worker/local/: create_worker.rs  submit_tokenizer_job.rs
model_gateway/src/observability/: metrics.rs
model_gateway/src/routers/grpc/: client.rs  context.rs  multimodal.rs  proto_wrapper.rs
model_gateway/src/routers/grpc/common/: response_collection.rs
model_gateway/src/routers/grpc/common/responses/: utils.rs
model_gateway/src/routers/grpc/harmony/: builder.rs  parser.rs  processor.rs  streaming.rs  types.rs
model_gateway/src/routers/grpc/harmony/stages/: request_building.rs
model_gateway/src/routers/grpc/regular/: streaming.rs
model_gateway/src/routers/grpc/regular/stages/: mod.rs  preparation.rs
model_gateway/src/routers/grpc/regular/stages/chat/: preparation.rs
model_gateway/src/routers/grpc/regular/stages/messages/: mod.rs  preparation.rs
model_gateway/src/routers/grpc/utils/: chat_utils.rs  message_utils.rs  mod.rs
model_gateway/src/routers/openai/realtime/: ws.rs
scripts/: check_release_versions.sh  ci_install_trtllm.sh  ci_killall_sglang.sh
scripts/k8s-runner-resources/: arc-runner-gpu.yaml
scripts/oracle_flyway/: schema-config.yaml
scripts/oracle_flyway/sql/: V3__Create_conversation_memories.sql
