[workspace]
members = ["model_gateway", "crates/protocols", "crates/reasoning_parser", "crates/tool_parser", "crates/workflow", "crates/tokenizer", "crates/auth", "crates/mcp", "crates/kv_index", "crates/data_connector", "crates/multimodal", "crates/wasm", "crates/mesh", "crates/grpc_client", "bindings/python", "bindings/golang", "clients/rust", "clients/openapi-gen", "tui"]
resolver = "2"

[workspace.dependencies]
# Internal workspace crates
openai-protocol = { version = "1.6.0", path = "crates/protocols" }
reasoning-parser = { version = "1.2.2", path = "crates/reasoning_parser" }
tool-parser = { version = "1.2.0", path = "crates/tool_parser" }
wfaas = { version = "1.0.3", path = "crates/workflow" }
llm-tokenizer = { version = "1.3.1", path = "crates/tokenizer" }
smg-auth = { version = "1.1.1", path = "crates/auth" }
smg-mcp = { version = "2.1.1", path = "crates/mcp" }
kv-index = { version = "1.2.0", path = "crates/kv_index" }
smg-data-connector = { version = "2.2.0", path = "crates/data_connector", package = "data-connector" }
llm-multimodal = { version = "1.5.0", path = "crates/multimodal" }
smg-wasm = { version = "1.1.0", path = "crates/wasm", package = "smg-wasm" }
smg-mesh = { version = "1.3.0", path = "crates/mesh", package = "smg-mesh" }
smg-grpc-client = { version = "1.5.0", path = "crates/grpc_client" }
smg-tui = { version = "0.1.0", path = "tui" }

# Shared dependencies
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
prost = "0.14.1"
prost-types = "0.14.1"
tonic = { version = "0.14.2", features = ["gzip", "transport"] }
tonic-prost = "0.14.2"
axum = { version = "0.8.6" }
blake3 = "1.5"
lz4_flex = "0.11"
bytemuck = { version = "1.21" }
chrono = { version = "0.4" }
dashmap = "6.1.0"
http = "1.1.0"
lru = "0.16.2"
num-traits = "0.2"
parking_lot = "0.12.4"
rand = "0.9.2"
reqwest = { version = "0.12.8", default-features = false }
serde = { version = "1.0" }
serde_json = "1.0"
serde_with = { version = "3", features = ["macros"] }
subtle = "2.6"
thiserror = "2.0.12"
tokio = { version = "1.42.0" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }
uuid = { version = "1.10", features = ["v7", "serde"] }
wasmtime = { version = "41.0", features = ["component-model", "async"] }
wasmtime-wasi = "41.0"
tokio-util = { version = "0.7", features = ["rt"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
webpki-roots = "1.0"
multer = "3"
scopeguard = "1.2"
bitflags = "2.10.0"
schemars = "0.8"

[workspace.lints.rust]
unsafe_code = "deny"
unused_qualifications = "warn"

[workspace.lints.clippy]
# Deny unwrap in production code (tests exempted via clippy.toml)
unwrap_used = "deny"
# Warn for now — promote to deny after cleanup (99 expect, 82 panic violations)
expect_used = "warn"
panic = "warn"

# Deny debug/placeholder macros (currently zero violations)
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"

# Print macros — use tracing instead (58 existing violations, warn for now)
print_stdout = "warn"
print_stderr = "warn"

# Enforce #[expect] over #[allow] for better lint tracking (92 existing violations, warn for now)
allow_attributes = "warn"

# Disallowed methods (see clippy.toml for the list) — warn for now, promote after audit
disallowed_methods = "warn"

# Code quality lints — warn initially, promote to deny after cleanup
explicit_iter_loop = "warn"
explicit_into_iter_loop = "warn"
semicolon_if_nothing_returned = "warn"
uninlined_format_args = "warn"
manual_assert = "warn"
manual_string_new = "warn"
inconsistent_struct_constructor = "warn"
needless_raw_string_hashes = "warn"
cloned_instead_of_copied = "warn"
inefficient_to_string = "warn"
assigning_clones = "warn"
stable_sort_primitive = "warn"
unnecessary_wraps = "warn"
unused_self = "warn"
unused_async = "warn"
if_not_else = "warn"
match_bool = "warn"
match_wildcard_for_single_variants = "warn"
trivially_copy_pass_by_ref = "warn"
or_fun_call = "warn"
ignored_unit_patterns = "warn"
ref_option = "warn"
large_futures = "warn"

# Import hygiene
single_component_path_imports = "warn"
absolute_paths = "warn"

# These pedantic lints are explicitly allowed to give authors discretion
default_trait_access = "allow"
match_same_arms = "allow"
must_use_candidate = "allow"
single_match_else = "allow"
doc_lazy_continuation = "allow"

[profile.release]
opt-level = "z"     # Optimize for size
lto = "fat"         # Full LTO for smaller binaries
codegen-units = 1   # Better optimization, slower compile
strip = true        # Strip debug symbols

[profile.ci]
inherits = "release"
opt-level = 2       # Lighter optimization (still fast runtime, much faster compile)
lto = "thin"        # Thin LTO - good balance
codegen-units = 16  # More parallelization for faster builds
strip = true

[profile.dev]
opt-level = 0
debug = 1
split-debuginfo = "unpacked"
incremental = true
codegen-units = 256

[profile.dev.package."*"]
opt-level = 2
debug = false


[profile.dev.build-override]
opt-level = 3
codegen-units = 1

[profile.dev-opt]
inherits = "dev"
opt-level = 1

[profile.bench]
opt-level = 3       # Max speed for benchmarks (release uses "z" for size)
lto = "thin"        # Good balance of speed and compile time
codegen-units = 1   # Better optimization
