[package]
name = "smg-python"
version = "1.3.1"
edition = "2021"

[lib]
name = "smg_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.2", features = ["extension-module", "abi3-py38"] }
tokio = { version = "1.42.0", features = ["full"] }
once_cell = "1.19"
serde_yaml = "0.9"

[dependencies.smg]
path = "../../model_gateway"
default-features = true

[dependencies.smg-auth]
workspace = true

[dependencies.tool-parser]
workspace = true

[features]
default = ["pyo3/extension-module"]
vendored-openssl = ["smg/vendored-openssl"]

[profile.ci]
inherits = "release"
opt-level = 2       # Lighter optimization (still fast runtime, much faster compile)
lto = "thin"        # Thin LTO - good balance
codegen-units = 16  # More parallelization for faster builds
strip = true

[lints]
workspace = true
