[package]
name = "kv-index"
version = "1.2.0"
edition = "2021"
description = "Radix tree implementations for prefix matching and cache-aware routing"
license = "Apache-2.0"
repository = "https://github.com/lightseekorg/smg"
authors = [
    "Simo Lin <linsimo.mark@gmail.com>",
    "Chang Su <mckvtl@gmail.com>",
    "Keyang Ru <rukeyang@gmail.com>",
]
keywords = ["radix-tree", "prefix-matching", "cache-routing", "llm"]
categories = ["data-structures", "caching"]

[dependencies]
bincode = "1.3"
dashmap = { workspace = true }
once_cell = "1.21.3"
parking_lot = { workspace = true }
rustc-hash = "2.1.1"
serde = { version = "1", features = ["derive"] }
tracing = { workspace = true }
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
criterion = { version = "0.8", features = ["html_reports"] }
rand = { workspace = true }
serde_json = "1"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }

[[bench]]
name = "throughput_bench"
harness = false

[lints]
workspace = true
