[package]
name = "smg-mesh"
version = "1.3.0"
edition = "2021"
description = "Mesh gossip protocol and distributed state synchronization for Shepherd Model Gateway"
license = "Apache-2.0"
repository = "https://github.com/lightseekorg/smg"
authors = [
    "Simo Lin <linsimo.mark@gmail.com>",
    "Tony Lu <tonyluj@gmail.com>",
]
keywords = ["mesh", "gossip", "crdt", "distributed", "cluster"]
categories = ["network-programming", "data-structures"]

[dependencies]
# Workspace dependencies
anyhow.workspace = true
blake3.workspace = true
lz4_flex.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
dashmap.workspace = true
http.workspace = true
num-traits.workspace = true
parking_lot.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full", "sync", "time"] }
tracing.workspace = true

# Mesh-specific dependencies
bincode = "1.3"
crdts = "7.3"
futures = "0.3"
metrics = "0.24.2"
num-bigint = "0.4"
prost = "0.14.1"
prost-types = "0.14.1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2.2"
tokio-stream = "0.1"
tonic = { version = "0.14.2", features = ["gzip", "transport", "tls-ring"] }
tonic-prost = "0.14.2"
uuid = { workspace = true, features = ["v4"] }

# Workspace crates
kv-index.workspace = true

[build-dependencies]
tonic-prost-build = "0.14.2"
prost-build = "0.14.1"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
lazy_static = "1.5"
tokio = { workspace = true, features = ["full", "test-util"] }
tracing-subscriber.workspace = true

[[bench]]
name = "mesh_serialization"
harness = false

[lints]
workspace = true
