[package]
name = "llm-multimodal"
version = "1.5.0"
edition = "2021"
description = "Multimodal processing for vision and other modalities"
license = "Apache-2.0"
repository = "https://github.com/lightseekorg/smg"
authors = [
    "Simo Lin <linsimo.mark@gmail.com>",
    "Chang Su <mckvtl@gmail.com>",
]
keywords = ["vision", "multimodal", "image-processing", "llm"]
categories = ["multimedia::images", "science"]

[lib]
name = "llm_multimodal"

[dependencies]
base64 = "0.22"
hf-hub = "0.5.0"
bytes = { version = "1.8.0", features = ["serde"] }
fast_image_resize = { version = "6.0.0", features = ["image"] }
image = { version = "0.25.4", default-features = false, features = ["png", "jpeg", "gif", "bmp", "ico", "tiff", "webp"] }
ndarray = "0.17"
once_cell = "1.21.3"
reqwest = { workspace = true, features = ["stream"] }
serde = { workspace = true, features = ["derive"] }
serde_bytes = "0.11"
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "fs", "rt-multi-thread"] }
url = "2.5.4"

# Workspace crates
llm-tokenizer.workspace = true
anyhow.workspace = true
blake3.workspace = true

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
npyz = { version = "0.8", features = ["npz"] }
tempfile = "3.8"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[[bench]]
name = "image_preprocess"
harness = false

[lints]
workspace = true
