[build-system]
requires = ["setuptools>=68.0", "grpcio-tools>=1.78.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smg-grpc-proto"
version = "0.4.2"
description = "SMG gRPC proto definitions for SGLang, vLLM, and TRT-LLM"
requires-python = ">=3.10"
dependencies = [
    "grpcio>=1.78.0",
    "protobuf>=5.26.0",
]
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    {name = "Chang Su", email = "mckvtl@gmail.com"},
    {name = "Simo Lin", email = "linsimo.mark@gmail.com"},
    {name = "Keyang Ru", email = "rukeyang@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/lightseekorg/smg"
Repository = "https://github.com/lightseekorg/smg"

[tool.setuptools.packages.find]
where = ["."]
include = ["smg_grpc_proto*"]

[tool.setuptools.package-data]
smg_grpc_proto = ["proto/*.proto", "generated/*.py", "generated/*.pyi"]
